# Go-Docker-CLI-Exercise

./: .gitignore  Dockerfile  README.md  docker-compose.yaml
.github/workflows/: python.yml
tools/: pyproject.toml
tools/src/cli/: gateway.py  main.py  parser.py
tools/src/cli/commands/: count_movie_years.py  search_movies.py
tools/tests/: test_count_movie.py  utils.py
